# TaskManagementSystemArch1C

./: App.py  README.md  Taskfile.yml  database.db  pyproject.toml
core/: config.py
db/: Engine.py  session.py  tables.py
db/alembic/: env.py
db/alembic/versions/: 195fa9b51a5d_.py  2c26762d070b_.py  e2441d0797bc_v1_added_users.py
db/dal/: base.py  dals.py  users.py
db/models/: __init__.py  base.py  models.py  users.py
dependencies/: db.py
docker/: Dockerfile  docker-compose.yml  entry.sh
exceptions/: base.py  common.py  handlers.py
routers/: employee_router.py  report_router.py  task_router.py  users.py
schemas/: schemas.py  users.py
utils/: meta.py
